package com.gyull.board.domain.location;

import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
public class Location {
  private Integer locationIdx;
  private String locationName;
}
