package com.gyull.board.domain.role;

import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
public class RoleGroup {
  
  private String roleIdx;
  private String role_code;
  private String groupName;
}
