package com.gyull.board.domain.tag;

public class Tag {
  
}
