package com.gyull.board.domain.withdraw;

import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
public class withdraw {
  
}
